--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gsap-trial": "^3.12.5",
     "i18next": "^25.2.1",
     "js-cookie": "^3.0.5",
+    "jsbarcode": "^3.12.1",
     "lucide-react": "^0.514.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
