--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
