--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "apexcharts": "^5.3.5",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.5",
     "i18next": "^25.2.1",
@@ -42,7 +44,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
