--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "docx": "^9.5.1",
+    "echarts": "^6.0.0",
     "file-saver": "^2.0.5",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.5",
@@ -32,7 +33,7 @@
     "lucide-react": "^0.514.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.7.0",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.3.0",
@@ -42,8 +43,7 @@
     "react-select": "^5.8.3",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.3",
-
+    "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17",
     "xlsx": "^0.18.5"
@@ -53,14 +53,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.4.10"
   }
 }
