--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.90.2",
     "apexcharts": "^5.3.5",
     "axios": "^1.7.7",
+    "chart.js": "^4.5.1",
     "dayjs": "^1.11.13",
     "docx": "^9.5.1",
     "echarts": "^6.0.0",
@@ -34,6 +35,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.8.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.3.0",
