--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "file-saver": "^2.0.5",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.5",
-    "i18next": "^25.2.1",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.12.1",
     "lucide-react": "^0.514.0",
@@ -37,7 +38,7 @@
     "react-apexcharts": "^1.8.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.5.3",
+    "react-i18next": "^15.7.4",
     "react-icons": "^5.3.0",
     "react-loading": "^2.0.3",
     "react-qr-code": "^2.0.15",
