--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "jsbarcode": "^3.12.1",
     "lucide-react": "^0.514.0",
+    "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.8.0",
