--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17",
+    "tailwind-scrollbar": "^3.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
