--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17",
     "tailwind-scrollbar": "^3.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
