--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-apexcharts": "^1.8.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.7.4",
     "react-icons": "^5.3.0",
     "react-loading": "^2.0.3",
