--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^5.3.5",
     "axios": "^1.7.7",
     "chart.js": "^4.5.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "docx": "^9.5.1",
     "echarts": "^6.0.0",
