--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.11",
     "@mui/styled-engine-sc": "^7.0.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.2",
     "apexcharts": "^5.3.5",
     "axios": "^1.7.7",
